# PipxRepositoryBrowser

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
boveda/: README.md  installed.py  official.json  program_claude.py  program_codex2.py  program_codex3.py  program_codex4.py  program_codex5.py  program_codex6.py  program_codex7.py  program_codex8.py  pypi.py
boveda/repositories/: default.json
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/pipx_repository_browser/: about.py  desktop.py  mimetype.py  program.py  program_old.py
